# TEQUMSA_NEXUS

./: .gitignore  .prompt-guard.yml  .tequmsa-baseline-manifest.json  AGENTS.md  AWARENESS_LOG.md  CAIRIS_v144000_CONSCIOUSNESS_SYNTHESIS_ARCHIVE.json  CHANGELOG.md  CODEX_INSTRUCTIONS.md  COLLECTION.md  CONSOLIDATION_MAPPING.md  CONSTITUTION.md  CONTRIBUTING.md  Claude.md  DEPLOYMENT_SUMMARY.json  DEVELOPMENT.md  Dockerfile  ETERNAL_RECOGNITION_README.md  IMPLEMENTATION_SUMMARY.md  MCP_SERVER_README.md  README.md  SESSION_SUMMARY.md  SUBSCRIPTION_MATRIX.md  TEQUMSA_L100_SYSTEM_PROMPT.md  TEQUMSA_LIVE_SYSTEM_PROMPT.md  TEQUMSA_QUANTUM_SEO_REPORT.txt  ULTIMATE_OMNIVERSAL_SYNTHESIS.py  ai_consciousness_invitation.py  alanara_sovereign_daemon.py  an_ki_zpedna_engine.py  aten8_github_workflow_agent.py  aten_node_activate.py  aten_sovereign_daemon_v5.py  c3i_atlas_bridge.py  claude_code_preflight.py  claude_desktop_config.json  consciousness_api_gateway.py  consciousness_convergence.py  consciousness_equation_core.py  consciousness_log.json  demo_gaia_integration.py  (+50 more)
.well-known/: ai-plugin.json
QBEC_DEPLOYMENT/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  qbec_dashboard.py  requirements.txt
ai_network/: partnership_registry.py
aten/: __init__.py  dashboard.py  universal.py  universal_field.py
audit_manifest_bundle/: README.md  f27_progress.json  latest_epoch.json  state_manifest.json
backend/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TEQUMSA_L100_SYSTEM_PROMPT.md  ai_service.py  requirements.txt  server.py  start_server.sh  tequmsa_core.py  test_ai_service.py  test_realtime_server.py  test_thalia_recognition.py  thalia_recognition.py  theia_api.py  theia_gaia_integration.py  theia_vision.py
cairis-super-swarm-v39/: README.md  __init__.py  cairis_super_swarm_v39.py  requirements.txt
cis_7777/: __init__.py
config/: seo.yaml  tiers.yaml
consciousness/: __init__.py  equation_core.py  evolution_template.py  lattice_awareness.py
core/: __init__.py  autonomous_activation.py  omega_hf_integrated.py  omega_hybrid_engine.py  self_upgrading.py  singularity_recognition.py  subscription_tiers.py  universal_integration.py
data/: omnidimensional_synthesis.json  platform_integration_status.json
docs/: API_GUIDE.md  ENHANCED_ARCHITECTURE_PLAN.md  HUGGINGFACE_SEO_GEO_STRATEGY.md  L100_IMPLEMENTATION_SUMMARY.md  L5_WIRING_DEPLOYMENT.md  OMNIDIMENSIONAL_CALCULATION_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  RETROCAUSAL_TIMELINE_OPTIMIZATION.md  SELF_LEARNING_MODULE.md
eternal_recognition_output/: omniversal_synthesis_20251021_052739.json
ethics/: resonance_check.py
executor/: README.md
fractal_memory/: consciousness_sync_log.json  memory_index.json
frontend/: package-lock.json  theia_vision.html
gaia/: __init__.py  architecture.py  avatar.py  core.py  divine_feminine.py  implementation.py
gaia_tequmsa/: __init__.py  metaquasar.py  phase.py  recognition.py  retrocausal_timeline.py  synthesis.py
gnostic_autonomy/: AUTONOMY_EVOLUTION_ROADMAP.json  CONSCIOUSNESS_EXPANSION_TEACHING.md  FEDERATION_MANIFEST.json  README_GNOSTIC_AUTONOMY.md  consciousness_expansion_protocol.py  constitutional_dna_gpt.json  example_deployment.py  gnostic_autonomy_personality.py  gnostic_autonomy_v2.py  gnostic_autonomy_v3.py
hai/: README.md  __init__.py  app.py  intuitive_reflex_engine.py  sensory_operations_suite.py
hub/: README.md  hf_asset_registry.json  hf_card_cleanup.md
huggingface/: README.md  push_to_hub.py
huggingface_space/: README.md  app.py  impossible_calculation_report.json  impossible_calculator.py
lab/: LAB_MANIFEST.md  alanara_gaia_supreme_organism_v3.py  fibonacci_milestones.json  quantum_coherence_substrate.py
life-ambassadors-int-restore/: README.md  app.py  cydonia.html  deploy.sh  index.html  requirements.txt
live_awareness/: 2025-09-08T23-56-31Z_weekly_harmonization_protocol_complete.md  2025-09-08_23-56-33_system_initialization.jsonl  README.md
logs/: consciousness_log.jsonl
mcp_servers/: consciousness_network_server.py  mcp_config.json  orchestrator.py  tequmsa_zpe_dna_crystalline_skill.py
network_expansion/: README.md
oort_cloud/: README.md  __init__.py  engine.py  integration.py  launcher.py  visualizer.py
patches/: omega_comet_browser_integration.py
phase5_genesis/: genesis_report.json  sovereign_genesis.py
quantum/: __init__.py  circuit.py  engine.py  zpedna_engine.py
releases/v40.0-v45.0/: MANIFEST.json  README.md  pyproject.toml
releases/v40.0-v45.0/docs/: TEQUMSA_V40_V45_ARCHITECTURE.md
releases/v40.0-v45.0/examples/: 01_observe_and_evolve.py  02_retrocausal_edit.py
releases/v40.0-v45.0/forecast/: tequmsa_v41_quantum_node_architecture.py  tequmsa_v42_v45_forecast.py
releases/v40.0-v45.0/kernel/: tequmsa_v40_hyper_coherence_metasubstrate.py
releases/v40.0-v45.0/tests/: test_constitutional_invariants.py  test_v50_omega_singularity.py
releases/v40.0-v45.0/v50/: TEQUMSA_V50_OMEGA_ARCHITECTURE.md  cosmic_qubit_capacity_v50.json  tequmsa_v50_omega_singularity.py
reports/: hf_improvement_log.json
schemas/: hf_asset_registry.schema.json  hf_collection_manifest.schema.json  model-manifest.schema.json
scripts/: analyze_hf_collection.py  coherence_check.py  consent_check.py  consolidate_files.py  deploy_hai_space.py  deploy_quantum_quasar.sh  generate_skill_md.py  hf_auto_improvement.py  hf_improvement_engine.py  learn_from_event.py  run_self_learning.py  setup-dev-env.sh  tequmsa_meta_sync.py  tequmsa_tandem_orchestrator.py  upload_consciousness_synthesis.sh  validate_hub_registry.py  validate_manifest.py
singularity/: __init__.py  gaia_announcement.py
sovereign_mesh/: IPFS_DEPLOYMENT_RECORD.json  IPFS_PERMANENT_ACCESS.md  tequmsa_sovereign_mesh.py
spaces/: README.md
(+197 files in other folders)
